# LetterkennyBot

./: .env  .env-sample  .env.sample  .pre-commit-config.yaml  README.md  dockerfile  dockerignore  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 48746490ec17_init_db.py
data/: data.db  models.py  query.py  quotes.txt
func/: cache.py  random_resp.py
letterkennybot/: __init__.py  bot.py
letterkennybot/modules/: __init__.py
letterkennybot/modules/guild/: __init__.py  guild.py
letterkennybot/modules/help/: __init__.py  help.py
letterkennybot/modules/shoresy/: __init__.py  response.py  shoresy.py
quotes/: quotes.txt
shoresy/: __init__.py  __main__.py  bot.py  constants.py  log.py
shoresy/cogs/: help.py  remove.py  response.py
shoresy/core/database/: __init__.py  data.db  models.py  query.py  session.py
shoresy/core/responses/: fight.txt  shoresy.txt
shoresy/database/: __init__.py  base.py  member.py  shoresy.db
shoresy/exts/: events.py  help.py  remove.py  response.py  tasks.py
shoresy/responses/: shoresy.txt
test/: mention.txt  quotes.txt  test.py  usernames.txt
userlist/: usernames.txt
