[tool.poetry]
name = "shoresy"
version = "2.2.0"
description = "Get insulted by Shorey and the gang with quotes from all seasons of Letterkenny and the spin-off Shoresy"
authors = ["DLCHAMP <36091350+dlchamp@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.44"
aiosqlite = "^0.17.0"
disnake = "^2.7.0"
loguru = "^0.6.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
