[tool.poetry]
name = "shoresy"
version = "2.3.0"
description = "Get insulted by Shorey and the gang with quotes from all seasons of Letterkenny and the spin-off Shoresy"
authors = ["DLCHAMP <36091350+dlchamp@users.noreply.github.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.25"
disnake = "^2.9.1"
coloredlogs = "^15.0.1"
disnake-ext-plugins = {git = "https://github.com/disnakecommunity/disnake-ext-plugins"}


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
ruff = "^0.1.15"
black = "^24.1.1"
isort = "^5.13.2"
pyright = "^1.1.349"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.ruff]
line-length = 100
exclude = ["alembic"]
select = ["ALL"]
ignore = [
    "ERA001", # commented out code.
    "D100", # docstrings in public modules.
    "D104", # docstrings in public package.
    "G004", # f-string in logger message.
    "ANN101", # self type hint.
    "S311", # pseudo randomness is OK
    "B008", # commands.Param is OK.
]

[tool.ruff.per-file-ignores]
"shoresy/constants.py" = [
    "RUF012", # mutable class attr
    "S105", # hardcoded passwords, it's not.
]
"shoresy/database/*" = [
    "A001", # use ID for database ID
    "A003", # use Warning for database tablename
]
"shoresy/exts/help.py" = ["E501"] # Not re-formatting for line length

[tool.ruff.pydocstyle]
convention = "numpy"
